--- a/paygate.yml
+++ b/paygate.yml
@@ -64,6 +64,6 @@ response:
         - paygate_auth_code: $AUTH_CODE
         - paygate_trx_id: $TRANSACTION_ID
         - paygate_amount: $AMOUNT
-    - trigger: "mememe,#payment_start_electronic_payment"
+    - trigger: "reload,#payment_start_electronic_payment"
   audit: >
     Transaction ID: $TRANSACTION_ID Auth Code: $AUTH_CODE Amount: $AMOUNT Result: $RESULT_DESC
