--- a/fields.yml
+++ b/fields.yml
@@ -188,7 +188,6 @@ id_no:
 id_number:
   type: id_no
 
-identity_no:
 
 last_name:
   desc: Your last name or surname as written in your ID book
@@ -286,6 +285,9 @@ postal_address:
   attr: { maxlength: 100 }
   valid: [at_least(15)]
 
+postal_city:
+  width: 70%
+
 postal_code:
   attr: { min: 0000, max: 9999 }
   valid:
@@ -295,6 +297,9 @@ postal_code:
 physical_address:
   attr: { maxlength: 128 }
   valid: [at_least(15)]
+
+physical_city:
+  width: 70%
 
 physical_code:
   attr: { min: 0000, max: 9999 }
@@ -360,7 +365,7 @@ support_email: Mukoni Support <support@mukoni.co.za>
 system_audit_trail:
   url: /audit_trail/system
   access: [developer]
-  
+
 title:
   desc: A descriptive or distinctive appellation, especially one belonging to a person by right of rank, office, attainment
   options:
