--- a/controls.yml
+++ b/controls.yml
@@ -288,6 +288,13 @@ disabled_input:
 disabled_text_input:
   type: disabled_input
 
+document_link:
+  type: link
+  action: post
+  target: _blank
+  post: []
+
+
 double_spaced:
   margin-top: 10px
 
