--- a/user.yml
+++ b/user.yml
@@ -273,6 +273,12 @@ login_password:
   name: Password
   valid: is_password_for(mail)
 
+logout:
+  post:
+    - read_session: email
+    - sql_exec: insert into audit_trail(user,action,detail) values($uid,'Logout','$email')
+    - call: session_destroy()
+    - redirect: $landing_content
 
 modify:
   type: labelled_input_page
