fixed change password

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -7,7 +7,9 @@ begin:
     not a robot. Please enter this OTP in the following screen to start changing
     your password.
   post:
-    - sql_values: select email_address email, first_name, last_name from user where id = '$uid'
+    - sql_values: >
+        select u.email, p.first_name, p.last_name
+        from user u join person p on u.person = p.id and u.id = '$uid'
     - write_session: email,first_name,last_name
     - clear_values
 
@@ -39,7 +41,7 @@ enter_email:
     changing your password
   type: wizard_page
   inputs:
-    - email: { valid: in(user.email_address) }
+    - email: { valid: in(user) }
   next:
     post:
       - write_session: email
