renamed email_address to email on password_changer.yml

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -60,8 +60,8 @@ update_password:
     - read_session: email
     - sql_exec: >
         update user set password = password('$password'), attempts=0
-        where email_address = '$email'
-    - sql_values: select id uid from user where email_address = '$email'
+        where email = '$email'
+    - sql_values: select id uid from user where email = '$email'
     - write_session: uid
     - clear_values
     - close_dialog: Password has been changed successfully
