--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,8 @@
-allow from all
+Require all granted
 Options +Indexes
 RewriteEngine on
 RewriteRule ^index.html$ index.php?path=index&content=home  [L]
 RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
 <Files ~ ".yml">
-  Order allow,deny
-  Deny from all
+  Require all denied
 </Files>
