--- a/controls.yml
+++ b/controls.yml
@@ -192,7 +192,7 @@ datatable:
   flags: []
     # - editall
     #
-  load:
+  values:
     - read_values: { derive: [data], rows: $data}
     - call: datatable::read(context,$key)
 
