--- a/user.yml
+++ b/user.yml
@@ -54,23 +54,24 @@ check_otp:
     - clear_values
 
 complete_registration:
-  type: wizard_page
+  type: input_page
   desc: |
     Thank you. You have been provisionally registered. <be>
     You will have limited access to the system
     until your registration has been approved. <br>
     Please check your email for registration status.
-  navigate:
-    - start: { url: user/login, action: dialog }
+  inputs:
+    - template: none
+    - type: button
+    - start: { url: user/login, action: dialog, style: {margin-left: 50%,margin-right: 50%} }
 
 confirm_registration:
-  type: wizard_page
+  type: input_page
   desc: |
     Below is a list of all the information you have entered to register on the system.
     If you are happy with everything, please accept the terms and conditions to
     complete the registration process.
   inputs:
-    - template: info_line
     - type: info_text
     - title
     - first_name
@@ -81,16 +82,15 @@ confirm_registration:
     - agree_terms: { type: checkbox, template: question_input }
   values:
     - read_session: title,first_name,last_name,cellphone,email
-  next:
-    validate: agree_terms
-    post:
-      - read_session: title,first_name,last_name,cellphone,email,password
-      - sql_insert: [person,title,first_name,last_name,cellphone,email]
-      - sql_values: select last_insert_id() person, password('$password') password, 1 active, 'reg' roles
-      - sql_insert: [user,person,email,password,cellphone,active,roles]
-      - sql_values: select last_insert_id() uid
-      - write_session: uid
-      - clear_values
+  validate: agree_terms
+  post:
+    - read_session: title,first_name,last_name,cellphone,email,password
+    - sql_insert: [person,title,first_name,last_name,cellphone,email]
+    - sql_values: select last_insert_id() person, password('$password') password, 1 active, 'reg' roles
+    - sql_insert: [user,person,email,password,cellphone,active,roles]
+    - sql_values: select last_insert_id() uid
+    - write_session: uid
+    - clear_values
   audit: $title $first_name $last_name $cellphone $email
 
 
@@ -160,9 +160,8 @@ enter_credentials:
     - type: password_input
     - password
     - confirm_password
-  next:
-    post:
-      - write_session: [title,first_name,last_name,cellphone,email,password]
+  post:
+    - write_session: [title,first_name,last_name,cellphone,email,password]
 
 history:
   access: [admin]
@@ -314,7 +313,7 @@ logout:
   audit:
     detail: $email
     post: [call: session_destroy()]
-    
+
 modify:
   type: labelled_input_page
   desc: Change user details
@@ -407,10 +406,9 @@ register:
   type: wizard
   name: Register User
   desc: Register as a new user of the system
-  height: 500
-  width: 700
+  width: 900
   steps:
     - enter_credentials
     - check_otp: { clear: true }
     - confirm_registration: { clear: true}
-    - complete_registration: { prev: false}
+    - complete_registration: {name: Completion,prev: false}
