--- a/paygate.yml
+++ b/paygate.yml
@@ -46,23 +46,24 @@ response:
     - reference
   values:
     - read_session
-    - sql_values: select round($paygate_amount/100,2) amount, if ($paygate_status=1,'Success', 'Failed') status
+    - sql_values: select round($paygate_amount/100,2) amount, if ('$status'='appr','Success', 'Failed') status
     - let:
         result_description: $paygate_result
         authorisation_code: $paygate_auth_code
         reference: $paygate_trx_id
     - clear_session: [paygate_amount, paygate_status, paygate_result, paygate_auth_code, paygate_trx_id]
   read:
-    #- paygate::verify(request)
+    - sql_values: >
+        select md5("$PAYGATE_ID|$REFERENCE|$TRANSACTION_STATUS|$RESULT_CODE|$AUTH_CODE|$AMOUNT|$RESULT_DESC|$TRANSACTION_ID|$RISK_INDICATOR|$paygate_secret") calc_checksum
+    - sql_values: select if('$TRANSACTION_STATUS'='1' and '$calc_checksum' = '$CHECKSUM', 'appr', 'reje') status
     - write_session:
         - paygate_status: $TRANSACTION_STATUS
         - paygate_result: $RESULT_DESC
         - paygate_auth_code: $AUTH_CODE
         - paygate_trx_id: $TRANSACTION_ID
         - paygate_amount: $AMOUNT
-    - sql_values: >
-        select if('$TRANSACTION_STATUS'='1', 'appr', 'reje') status, id payment_id, payer_id partner_id
-        from payment where id = '$REFERENCE'
+        - status
+    - sql_values: select id payment_id, payer_id partner_id from payment where id = '$REFERENCE'
     - sql_update: [payment, id: $REFERENCE, status, reference1: $TRANSACTION_ID, reference2: $AUTH_CODE ]
 
 
