Change type: wizard_page to input_page

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -26,8 +26,8 @@ change:
 forgot:
   name: Forgot Password
   desc: Reset your password
-  height: 400
-  width: 600
+  width: 900
+  position: { my: 'top', at: 'top+50' }
   type: wizard
   steps:
     - enter_email
@@ -35,19 +35,18 @@ forgot:
     - update_password
 
 enter_email:
-  name: Start Changing Password
+  name: Registered email
   desc: >
     Enter the email you used to register on the system below to start
     changing your password
-  type: wizard_page
+  type: input_page
   inputs:
     - email: { valid: in(user) }
-  next:
-    post:
-      - write_session: email
+  post:
+    - write_session: email
 
 update_password:
-  type: wizard_page
+  type: input_page
   width: 700
   name: Change Password
   desc: Please enter your new password and type it again to confirm it.
@@ -55,7 +54,6 @@ update_password:
     - type: password_input
     - password
     - confirm_password
-  navigate: [ update_password ]
   post:
     - read_session: email
     - sql_exec: >
