fixed forgot password,applied methods needs revisitation

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -26,28 +26,27 @@ change:
 forgot:
   name: Forgot Password
   desc: Reset your password
-  height: 400
-  width: 600
+  width: 900
   type: wizard
   steps:
     - enter_email
     - check_otp: { url: /user/check_otp, clear: true }
     - update_password
+    - completion
 
 enter_email:
   name: Start Changing Password
   desc: >
     Enter the email you used to register on the system below to start
     changing your password
-  type: wizard_page
+  type: input_page
   inputs:
     - email: { valid: in(user) }
-  next:
-    post:
-      - write_session: email
+  post:
+    - write_session: email
 
 update_password:
-  type: wizard_page
+  type: input_page
   width: 700
   name: Change Password
   desc: Please enter your new password and type it again to confirm it.
