--- a/controls.yml
+++ b/controls.yml
@@ -28,6 +28,10 @@ alert_message:
 autoheight:
   height: auto
 
+autosize:
+  width: auto
+  height: auto
+  
 biggest:
   width: 100%
   height: 100%
@@ -193,8 +197,6 @@ datatable:
   row_creator: { type: table_row }
   css: [/common/datatable.css,/datatable.css]
   flags: []
-    # - editall
-    #
   values:
     - read_values: { derive: [data], rows: $data}
     - call: datatable::read(context,$key)
