--- a/controls.yml
+++ b/controls.yml
@@ -31,7 +31,7 @@ autoheight:
 autosize:
   width: auto
   height: auto
-  
+
 biggest:
   width: 100%
   height: 100%
@@ -65,7 +65,7 @@ bookmark:
 
 borderless:
   border: 0
-  
+
 bottom_left:
   position: absolute
   left: 0
@@ -304,7 +304,7 @@ document_link:
   target: _blank
   query: " "
   post:
-    - view_doc
+    - view_doc: $value
 
 
 
