--- a/controls.yml
+++ b/controls.yml
@@ -60,7 +60,13 @@ bookmark:
     name: $title
 
 borderless:
+  border-style: none
   border: 0
+  border-top: 0
+  border-right: 0
+  border-left: 0
+  border-bottom: 0
+
   
 bottom_left:
   position: absolute
